Fix banner image on iOS

--- a/css/main.css
+++ b/css/main.css
@@ -106,7 +106,11 @@ h3 {
 }
 
 .masthead {
-    background: url("../images/BG.jpg") no-repeat fixed center center !important;
+    background: url("../images/BG.jpg") !important;
+    background-attachment: fixed !important;
+    background-repeat: no-repeat !important;
+    background-position: center center !important;
+    background-size: cover !important;
     margin-bottom: 3em !important;
 }
 
